// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteEnginesConfirmationModal with select more than one engine renders correctly 1`] = `
<ConfirmationModal
  confirm={[Function]}
  isOpen={false}
  title="Suppression des moteurs"
  toggle={[Function]}
>
  <WithStyles(ForwardRef(Typography))>
    Confirmez-vous la suppression des moteurs suivants : engine_1, engine_2 ?
  </WithStyles(ForwardRef(Typography))>
</ConfirmationModal>
`;

exports[`DeleteEnginesConfirmationModal with select one engine renders correctly 1`] = `
<ConfirmationModal
  confirm={[Function]}
  isOpen={false}
  title="Suppression du moteur"
  toggle={[Function]}
>
  <WithStyles(ForwardRef(Typography))>
    Confirmez-vous la suppression du moteur suivant : engine_1 ?
  </WithStyles(ForwardRef(Typography))>
</ConfirmationModal>
`;

exports[`DeleteEnginesConfirmationModal without selected engines renders correctly 1`] = `""`;
